Add a proper back button handling
Now when clicking back on a serie, you will be properly transported to either your last search, or the /series page

--- a/src/app.css
+++ b/src/app.css
@@ -45,3 +45,7 @@ div.success {
 .btn.disabled {
 	@apply opacity-50 cursor-not-allowed pointer-events-none;
 }
+
+.anchor-offset {
+	@apply -mt-10 pt-10;
+}
